# RoughCut

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AUTO_REBUILD.md  Dockerfile  README.md  _tmp_check.py  alembic.ini  compose-full.yml  docker-compose.asr-matrix.yml  docker-compose.automation.yml  docker-compose.cosyvoice3.yml  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.moss-audio.yml  docker-compose.moss-tts-local.yml  docker-compose.moss-tts.yml  docker-compose.qwen3-asr.yml  docker-compose.runtime.yml  docker-compose.yml  inspect_artifacts_render.py  inspect_avatar_plan.py  inspect_job.py  inspect_render_output.py  inspect_render_plan.py  inspect_step_error.py  inspect_step_render_meta.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rerun_render_sync.py  restart_roughcut.bat  restart_roughcut.ps1  roughcut_config_profiles.json  start_roughcut.bat  start_roughcut.ps1  stop_roughcut.bat  (+3 more)
.playwright-cli/: page-2026-04-02T03-52-32-471Z.yml  page-2026-04-02T03-52-52-102Z.yml  page-2026-04-02T03-53-09-369Z.yml
.tmp/: knife_job_dump.txt
artifacts/: bili-api-parse.mjs  bili-api-pre.mjs  bili-api-search.mjs  bili-api-string-search.mjs  bili-click-category.mjs  bili-click-season.mjs  bili-mouse-category.mjs  bili-resources.mjs  bilibili-current-collection-dropdown-probe.json  bilibili-final-publish-report.json  cdp_bili_click_no_declaration.mjs  cdp_bili_cover_probe.mjs  cdp_bili_modal_probe.mjs  cdp_platform_snapshot.mjs  cdp_scroll_probe.mjs  composite-platform-task-results-final-wave.json  composite-platform-task-results-repair-wave.json  composite-platform-task-results-rerun.json  composite-platform-task-results-rerun2.json  composite-platform-task-results-rerun3.json  composite-platform-task-results.json  composite-schedule-reprobe.json  dedicated-platform-task-results-rerun2.json  dedicated-platform-task-results-rerun3.json  dedicated-platform-task-results-rerun4.json  dedicated-platform-task-results-rerun5.json  dedicated-platform-task-results-rerun6.json  dedicated-platform-task-results-rerun7.json  dedicated-platform-task-results.json  export_publication_attempt_payloads.py  formal-live-scheme-final-prepublish.json  formal-live-scheme-preflight.json  formal-live-scheme-real-probe-timeout300.json  formal-live-scheme-real-probe.json  formal-publish-created-attempts.json  formal-publish-supervision-attempt.json  formal-publish-supervision-report.json  (+58 more)
(+1023 files in other folders)
